--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -1,7 +1,8 @@
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 20px 10px;
+  background-color: #ffffff;
+  padding: 10px 10px;
+  box-shadow: 0px 0px 10px 1px rgb(0, 0, 0, 0.3);
 }
 
 .header a {
@@ -22,14 +23,12 @@
 
 /* Change the background color on mouse-over */
 .header a:hover {
-  background-color: #ddd;
-  color: black;
+  color: rgb(85, 203, 250);
 }
 
 /* Style the active/current link*/
 .header a.active {
-  background-color: dodgerblue;
-  color: white;
+  color: gray;
 }
 
 .header-right {
