--- a/client/src/pages/HomePage/Home.css
+++ b/client/src/pages/HomePage/Home.css
@@ -1,12 +1,13 @@
 .image-container {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: auto;
 }
 
 .image-container img {
   width: 100%;
   height: 100%;
+  max-height: 600px;
   object-fit: cover;
 }
 
@@ -15,14 +16,16 @@
   top: 0;
   left: 0;
   width: 40%;
-  height: 90%;
+  max-width: 500px;
+  height: auto;
   background-color: #fff;
   /* This will give a white background */
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  margin: 40px;
+  margin-top: 35px;
+  margin-left: 35px;
   box-sizing: border-box;
   gap: 10px;
 }
